# test-task-ma

./: .pre-commit-config.yaml  README.md  pyproject.toml
escaping/: constants.py  escapings.py
short_links/: constants.py  db.py  short_links.py  throttlings.py  typings.py
sql/: task_1.sql  task_2.sql
